[package]
name = "osu-db"
version = "0.2.2"
authors = ["negamartin"]
edition = "2018"

# Crates.io package info
description = "Reading and writing of osu! binary files: `osu!.db`, `collection.db`, `scores.db` and `.osr` replay files."
readme = "README.md"
repository = "https://github.com/negamartin/osu-db"
license = "Unlicense"
keywords = ["osu"]
categories = ["encoding", "parser-implementations"]
include = ["Cargo.toml", "src", "LICENSE"]

[dependencies]
nom = "7"
chrono = "0.4"
liblzma = { version = "0.4", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[features]
default = ["compression"]
ser-de = ["serde", "serde_derive", "chrono/serde"]
compression = ["liblzma"]
